Regular commit. SignIn has been added
