# fintech-auth/spring/src/main/java/org/acme/fintech/controller/ApiController.java
@@ -1,5 +1,7 @@
 package org.acme.fintech.controller;
 
+import org.acme.fintech.exception.ClientValidationException;
+import org.acme.fintech.exception.PasswordValidationException;
 import org.acme.fintech.model.Client;
 import org.acme.fintech.model.Credential;
 import org.acme.fintech.repository.ClientRepository;
@@ -7,6 +9,7 @@ import org.acme.fintech.request.VerifyPassword;
 import org.acme.fintech.util.PasswordUtil;
 import org.jboss.logging.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -33,34 +36,26 @@ public class ApiController {
             String phone = request.getPhone();
             Client client = clientRepository.findByPhone(phone);
             if (client == null) {
-                logger.warn("No client found for " + phone);
-                return ResponseEntity.badRequest().build();
+                throw new ClientValidationException("No client found for " + phone);
             } else if (Client.Status.ACTIVE != client.getStatus()) {
-                logger.warn("Client not activated for " + phone);
-                return ResponseEntity.badRequest().build();
+                throw new ClientValidationException("Client not activated for " + phone);
             }
 
             Credential credential = client.getCredential();
-            if (credential == null) {
-                logger.warn("No credential found for " + phone);
-                return ResponseEntity.badRequest().build();
-            }
+            PasswordUtil.validatePassword(credential, request.getPassword());
 
-            // Encode given password using restored salt
-            String password = request.getPassword();
-            byte[] saltBytes = PasswordUtil.decodeBase64(credential.getSalt());
-            String encodedPassword = PasswordUtil.encodePassword(password, saltBytes);
+            logger.debug("Password is correct!");
+            return ResponseEntity.ok().build();
+        } catch (ClientValidationException ex) {
+            logger.error("Client validation failed " + ex.getMessage(), ex);
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
 
-            // Verify credential
-            if (credential.getPassword().equals(encodedPassword)) {
-                logger.debug("Password is correct!");
-                return ResponseEntity.ok().build();
-            } else {
-                logger.warn("Password is wrong!");
-                return ResponseEntity.badRequest().build();
-            }
+        } catch (PasswordValidationException ex) {
+            logger.error("Password validation failed " + ex.getMessage(), ex);
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+
         } catch (Exception ex) {
-            logger.error("api verify failed " + ex.getMessage(), ex);
+            logger.error("API verify failed " + ex.getMessage(), ex);
             return ResponseEntity.internalServerError().build();
         }
     }
