# fintech-auth/spring/src/main/java/org/acme/fintech/request/ClientDataRequest.java
@@ -1,0 +1,16 @@
+package org.acme.fintech.request;
+
+import lombok.*;
+
+import java.time.LocalDate;
+
+@Getter
+@Setter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class ClientDataRequest {
+    private String phone;
+    private String contract;
+    private LocalDate birthdate;
+}
