# fintech-auth/spring/src/main/java/org/acme/fintech/request/SignInComplete.java
@@ -1,0 +1,13 @@
+package org.acme.fintech.request;
+
+import lombok.*;
+
+@Getter
+@Setter
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class SignInComplete {
+    private String phone;
+    private String otpCode;
+}
