# fintech-auth/spring/src/main/java/org/acme/fintech/request/SignInRequest.java
@@ -2,15 +2,12 @@ package org.acme.fintech.request;
 
 import lombok.*;
 
-import java.time.LocalDate;
-
 @Getter
 @Setter
 @Builder
 @NoArgsConstructor
 @AllArgsConstructor
-public class FullContractRequest {
+public class SignInRequest {
     private String phone;
-    private String contract;
-    private LocalDate birthdate;
+    private String password;
 }
