# fintech-auth/spring/src/main/java/org/acme/fintech/response/JwtAuthenticationToken.java
@@ -1,0 +1,10 @@
+package org.acme.fintech.response;
+
+import lombok.Data;
+
+@Data
+public class JwtAuthenticationToken {
+    private String accessToken;
+    private long expiresIn = -1;
+    private String tokenType = "Bearer";
+}
